# odroid-hc4-railboard

./: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml  railboard.service  requirements.txt
railboard/: __init__.py  __main__.py  api.py  config.py  display.py  journeys.py  manager.py  mock.py  screens.py  sysinfo.py
